<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/update_measurement_date_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="80dp"
        android:text="Measurement date: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_systolic_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_systolic_label" />

    <EditText
        android:id="@+id/update_measurement_date_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="text"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_measurement_date_label" />

    <EditText
        android:id="@+id/update_measurement_time_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="time"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_measurement_time_label" />

    <TextView
        android:id="@+id/update_measurement_time_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Measurement time: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_measurement_date_value" />

    <TextView
        android:id="@+id/update_systolic_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Systolic Pressure: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_measurement_time_value" />

    <TextView
        android:id="@+id/update_diastolic_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Diastolic Pressure: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_systolic_value" />

    <EditText
        android:id="@+id/update_diastolic_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_diastolic_label" />

    <TextView
        android:id="@+id/update_heart_rate_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Heart rate: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_diastolic_value" />

    <EditText
        android:id="@+id/update_heart_rate_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_heart_rate_label" />

    <TextView
        android:id="@+id/update_comment_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Comments: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_heart_rate_value" />

    <EditText
        android:id="@+id/update_comment_value"
        android:layout_width="334dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_comment_label" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#66BB6A"
        android:text="Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_comment_value" />

    <TextView
        android:id="@+id/update_measurement"
        android:layout_width="277dp"
        android:layout_height="36dp"
        android:text="Update Measurement"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/update_measurement_date_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

</androidx.constraintlayout.widget.ConstraintLayout>