<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/add_measurement_date"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="80dp"
        android:text="Measurement date: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_measurement_date_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="text"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_measurement_date" />

    <EditText
        android:id="@+id/add_measurement_time_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="time"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_measurement_time" />

    <TextView
        android:id="@+id/add_measurement_time"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Measurement time: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_measurement_date_value" />

    <TextView
        android:id="@+id/add_systolic_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Systolic Pressure: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_measurement_time_value" />

    <TextView
        android:id="@+id/add_diastolic_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="52dp"
        android:text="Diastolic Pressure: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_systolic_label" />

    <EditText
        android:id="@+id/add_diastolic_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_diastolic_label" />

    <TextView
        android:id="@+id/add_heart_rate_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Heart rate: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_diastolic_value" />

    <EditText
        android:id="@+id/add_heart_rate_value"
        android:layout_width="334dp"
        android:layout_height="38dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_heart_rate_label" />

    <TextView
        android:id="@+id/add_comment_label"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Comments: "
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_heart_rate_value" />

    <EditText
        android:id="@+id/add_comment_value"
        android:layout_width="334dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_comment_label"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#66BB6A"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_comment_value" />

    <TextView
        android:id="@+id/add_measurement"
        android:layout_width="249dp"
        android:layout_height="36dp"
        android:text="Add Measurement"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/add_measurement_date_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/add_systolic_value"
        android:layout_width="335dp"
        android:layout_height="37dp"
        android:background="@drawable/radius2"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/add_diastolic_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_systolic_label"
        app:layout_constraintVertical_bias="0.533" />

</androidx.constraintlayout.widget.ConstraintLayout>