...
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diastolic_value" />


        <Button
            android:id="@+id/delete_btn"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/ic_baseline_delete_24"
...
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heart_rate_label"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginStart="240dp"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
...
